--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "magic-csv",
   "version": "1.0.0",
-  "description": "A robust CSV parser",
+  "description": "Robust CSV parser with format detection",
   "main": "lib/csv.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: test harness has not been made public\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/greenseedtechnologies/magic-csv/issues"
   },
-  "homepage": "https://github.com/greenseedtechnologies/magic-csv"
+  "homepage": "https://github.com/greenseedtechnologies/magic-csv",
+  "devDependencies": {
+    "async": "~0.9.0",
+    "coffee-script": "~1.8.0"
+  }
 }
